# internal-staff-directory

./: .gitignore  README.md  connect_data.py  main.py  pyproject.toml  staff_dashboard_metrics.py  streamlit_app.py
assets/text/help/: about.txt  data_sharing.txt  delete_user.txt  find_hire_date.txt  find_job_title.txt  photo_microsoft.txt  photo_missing.txt  photo_use.txt  user_data.txt  user_management.txt
assets/text/updates/: 2025_11_12.txt
directory_pages/: court_directory.py  faq.py  intern_directory.py  resources.py  staff_directory.py  welcome_page.py
pages/: court_directory.py  staff_birthdays.py  staff_dashboard.py
